2007-12-30  Erik G. Larsson  <erik_g_larsson@users.sourceforge.net>

	* doc/local/verification.doc: Documentation update

2007-12-24  Adam Piatyszek  <ediap@users.sourceforge.net>

	* configure.ac.in, itpp/base/Makefile.am, itpp/base/sources.mk,
	itpp/base/zdotusub.f, m4/acx_blas.m4: Removed redundant zdotusub_
	Fortran wrapper to zdotu_ function

	Now, the proper calling conventions of zdotu_ Fortran function
	should be detected properly in all cases. Therefore, the zdotusub_
	wrapper function, which was a temporary workaround solution,
	should not be required any more.

2007-12-23  Adam Piatyszek  <ediap@users.sourceforge.net>

	* m4/ax_func_zdotu.m4: Improved zdotu_ calling convention tests

	The previous tests did not work properly on Debian unstable (sid)
	and SUSE 10.0 64-bit architectures. The improved tests work as
	expected.

2007-12-21  Adam Piatyszek  <ediap@users.sourceforge.net>

	* itpp/base/blas.h, itpp/base/vec.h: Fix wrong zdotu_ calling
	convention on Debian amd64

	This patch promotes the calling convention of BLAS zdotu_ function
	that returns its result through the first function argument. This
	is the default method used by older GCC Fortran
	compiler (version 3).

	On Debian amd64, the configure-time detection of the proper
	calling convention results in both methods working. However, the
	method that returns the complex result by value, like standard
	C/C++ functions, causes failures of blas_test and vec_test.

	This patch fixes bug report [1855481].

2007-12-17  Adam Piatyszek  <ediap@users.sourceforge.net>

	* doc/local/linking.doc: Cosmetic documentation fixes

------------------------------------------------------------------------------

2007-12-15  Adam Piatyszek  <ediap@users.sourceforge.net>

	* IT++ 4.0.1 released (SVN tag: release-4-0-1)

	* NEWS: Release notes for IT++ 4.0.1 added

2007-12-13  Adam Piatyszek  <ediap@users.sourceforge.net>

	* doc/Makefile.am, doc/tutorial/src/Makefile.am: Build tutorial